--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,15 @@
 # OpenAI兼容API代理 for Z.ai GLM-4.6 环境变量配置
 # 复制此文件为 .env.local 并根据需要修改
 
+REGISTER_ENABLED=true
+ZAI_USERNAME=admin
+ZAI_PASSWORD=123456
+REGISTER_DB_PATH=./data/zai2api.db
+
+ADMIN_ENABLED=true
+ADMIN_USERNAME=admin
+ADMIN_PASSWORD=123456
+
 # ===== 必需配置 =====
 # Z.ai 的访问令牌（完全可选）
 # 获取方式：登录 Z.ai 后从浏览器开发者工具中获取
